first few flags

--- a/flags.html
+++ b/flags.html
@@ -5,13 +5,17 @@
     </head>
     <body>
 <div id="indonesia" class="flagContainer">
-
+    <div class="indo1"></div>
+    <div class="indo2"></div>             
 </div>
 <div id="columbia" class="flagContainer">
-
+    <div class="col1"></div>
+    <div class="col2"></div>
+    <div class="col3"></div>
 </div>
 <div id="ireland" class="flagContainer">
-
+    <div class="ire1"></div>
+    <div class="ire2"></div>
 </div>
 <div id="france" class="flagContainer">
 
